# cv-critic-agent

./: .env.example  .gitignore  CLAUDE.md  README.legacy-source.md  README.md  context.md  pyproject.toml  render.yaml  working-notes.md
.github/workflows/: ci.yml
docs/: PHASE5_ACCESS_GATE.md  deployment.md
legacy-node/: run.mjs
scripts/: crew_script.py  sync_sources.py
sources/: chatbot-knowledge.ts  cv-page.tsx  data.ts  saif-ia-technical-sheet.md  system-prompt.ts  tools.ts
src/cv_critic_agent/: __init__.py  __main__.py  api.py  cli_ui.py  crew.py  cron_router.py  env.py  events.py  llm.py  main.py  mistral_utils.py  paths.py  prompts.py  reports.py  run_manager.py  sources.py  telegram_webhook_router.py  workflow.py
src/cv_critic_agent/access_requests/: __init__.py  models.py  router.py  store.py
src/cv_critic_agent/admin/: __init__.py  router.py
src/cv_critic_agent/budget/: tracker.py  wiring.py
src/cv_critic_agent/config/: agents.yaml  tasks.yaml
src/cv_critic_agent/notifier/: __init__.py  email.py  telegram.py
src/cv_critic_agent/security/: __init__.py  crypto.py  limiter.py  logging_filter.py  pii.py  session.py  (+1 more)
tests/: test_access_request_model.py  test_access_request_store.py  test_access_requests_endpoints.py  test_api.py  test_budget_tracker.py  test_budget_wiring.py  test_cron_cleanup.py  test_crypto.py  test_logging_filter.py  test_notifier.py  test_pii.py  test_runs_endpoint.py  test_security_chain.py  test_security_middleware.py  test_session.py  test_workflows.py
ui/: .env.production  README.md  package-lock.json  package.json
(+24 files in other folders)
