[project]
name = "cv-critic-agent"
version = "0.1.0"
description = "CrewAI-native CV critic agent with legacy Node.js and migration script implementations."
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "crewai>=0.80.0",
  "crewai-tools>=0.20.0",
  "mistralai>=1.0.0",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
]
server = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "cryptography>=42.0.0",
]

[project.scripts]
cv-critic-agent = "cv_critic_agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests", "scripts"]
extend-exclude = ["reports", ".venv", "legacy-node"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter
